        fixed bug which prevented the nmap link from showing in the html report
        fixed broken link for nmap.xml in the html report
        fixed '-a' logic:
            -a will cause all ports to show up in the serverinfo csv
            note:  asm will always include all ports

	CHANGES
        html report - 'm' button changed to 'd' and now brings up diagram in another tab


----- 0.31 -----

	BUGFIXES
		switched back to '{}' for dict definitions

	CHANGES
        added PIL library to install script and updated all files to accomodate the change.
            this made library references in rawr_meta much simpler
        added SOCKS5 proxy support
        added proxy authenciation for socks5, http(basic), and http(digest)
        added proxy test to verify - pulls and shows current IP from ipchicken
        reconfigured proxy switch(es)


----- 0.3 -----

	BUGFIXES
		fixed install error caused by an old version of requests
		implemented John Askew's fix for screenshot.js
			code was incompatible with newer version of PJS (1.9.8)
			his changes work with both versions
        fixed json and json-min - json and json only - also verified cleanup of files for json-min
        implemented workaround for Issue #2
            (Issue #2 - RHEL / CentOS / Fedora - pip pygraphviz does not detect graphviz install)
        fixed .total_seconds() | centOS bug(s) - changed all instances of .total_seconds() reference to .seconds()
        multiple bugfixes for the install script        
        fixed bug in input list creation
        fixed / tested all inputs
		fixed serverinfo 'order by' bug
        reviewed bing functionality - unable to replicate issues
        filtered a lot of junk from meta report

	CHANGES
        moved .cfg file to main log folder   
        now skipping the phantomjs check if --noss is supplied        
		(incomplete) added option to use google dorks to pull common docs (crawl or not)