@@ -16,7 +16,6 @@ nmapspeed = 4  # nmap -T<n> setting
 nthreads = 25  # number of threads for the info run
 allow_redir = True  # Allow redirects for non-spidering calls
 useragent = 'Mozilla/5.0 (Windows; U; MSIE 9.0; WIndows NT 9.0; en-US)'  # default for the info run and screenshots.
-ports = "80,443,8080,8088,8443"  # default scan ports
 fuzzdb = "66,80,81,443,445,457,1080,1100,1241,1352,1433,1434,1521,1944,2301,3128,3306,4000,4001" + \
          ",4002,4100,5000,5432,5800,5801,5802,6346,6347,7001,7002,8080,8088,8443,8888,30821"
 # http://code.google.com/p/fuzzdb/source/browse/trunk/wordlists-misc/common-http-ports.txt
